[workspace]
resolver = "2"

members = [ 
    "contracts/governor",
    "contracts/votes"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.1.0"

[workspace.dependencies.sep-41-token]
version = "0.3.0"
