[workspace]
resolver = "2"

members = [ 
    "contracts/governor",
    "contracts/votes",
    "contracts/tests",
    "contracts/mock-subcall"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.3.2"

[workspace.dependencies.sep-41-token]
version = "0.3.0"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.0.0"
