[package]
name = "soroban-governor"
version = "1.1.1"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }