[package]
name = "soroban-votes"
version = "1.1.1"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["bonding"]
testutils = ["soroban-sdk/testutils"]
bonding = []
sep-0041 = []
clawback = []


[dependencies]
soroban-sdk = { workspace = true }
sep-41-token = { workspace = true }
soroban-fixed-point-math = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }